styles.css fixed some alignments on rcorner1,2,3,4

--- a/styles.css
+++ b/styles.css
@@ -36,10 +36,41 @@
   background: white;
   display: flex;
   flex-direction: row;
-  padding-top: 1em;
-  padding-bottom: 2em;
+  justify-content: center;
+  width: 100%;
 }
-
+.rcorner1 {
+  border-radius: 25px;
+  border: 2px solid lightskyblue;
+  padding: 20px;
+  width: 100px;
+  height: 100px;
+  margin: 20px;
+}
+.rcorner2 {
+  border-radius: 25px;
+  border: 2px solid lightskyblue;
+  padding: 20px;
+  width: 100px;
+  height: 100px;
+  margin: 20px;
+}
+.rcorner3 {
+  border-radius: 25px;
+  border: 2px solid lightskyblue;
+  padding: 20px;
+  width: 100px;
+  height: 100px;
+  margin: 20px;
+}
+.rcorner4 {
+  border-radius: 25px;
+  border: 2px solid lightskyblue;
+  padding: 20px;
+  width: 100px;
+  height: 100px;
+  margin: 20px;
+}
 
 /*section 3*/
 .section3 {
@@ -49,5 +80,14 @@
 
 /*section 4*/
 .section4 {
+  background: white;
+  padding: 50px;
+}
+.call-to-action {
   background: lightblue;
+  border-radius: 5px;
+  padding: 10px;
+  width: 100%;
+  height: 50%;
+
 }
